# PKC.SF.B.Sc.CS_2023-26_-_Samuvel.A

./: .gitignore
Dlib_Face_Recognition_App/: README.md
Dlib_Face_Recognition_App/python_app/: pyproject.toml  watchdog_script.py
Dlib_Face_Recognition_App/web_client_react/: tailwind.config.js
Dlib_Face_Recognition_App/web_client_react/src/: App.css
Dlib_Face_Recognition_App/web_client_react/src/components/pages/: ImageUpload.jsx
Dlib_Face_Recognition_App/web_server_flask/: Procfile  __init__.py  app.py  pyproject.toml  reload_server.py
Dlib_Face_Recognition_App/web_server_flask/templates/: index.html
Frontend-Projects/Bulk-Calculator/: index.html  script.js  styles.css
Frontend-Projects/Naan-Mudhalvan/: index.html  predefinedData.json  script.js  styles.css
Frontend-Projects/React-Projects/Speak-Test-App/: package-lock.json
Full-Stack-Projects/Dlib_Face_Recognition_App/python_app/: image_recognition.py  video_recognition.py  webcam_recognition.py
Full-Stack-Projects/Dlib_Face_Recognition_App/web_client_react/: index.html  package-lock.json  package.json
Full-Stack-Projects/Dlib_Face_Recognition_App/web_client_react/src/: App.jsx  index.css  main.jsx
Full-Stack-Projects/Dlib_Face_Recognition_App/web_client_react/src/components/common/: Navbar.jsx
Full-Stack-Projects/Dlib_Face_Recognition_App/web_client_react/src/components/pages/: VideoUpload.jsx  Webcam.jsx
Full-Stack-Projects/Dlib_Face_Recognition_App/web_server_flask/: gunicorn_config.py  logger_config.py
Full-Stack-Projects/Dlib_Face_Recognition_App/web_server_flask/logics/: face_recognition.py  firebase.py
Full-Stack-Projects/Facenet_Face_Recognition_App/: logger_config.py  pyproject.toml
Full-Stack-Projects/Facenet_Face_Recognition_App/facenet-flask-server/: known_embeddings.pkl  requirements.txt  server.py
Full-Stack-Projects/Facenet_Face_Recognition_App/facenet-flask-server/static/: styles.css
Full-Stack-Projects/Facenet_Face_Recognition_App/facenet-flask-server/templates/: index.html
Full-Stack-Projects/Facenet_Face_Recognition_App/facenet-python-app/: app.py
Mini-Projects/naan-mudhalvan/: index.html  script.js
Mini-Projects/speak-test-app/: package.json
Mini-Projects/speak-test-app/src/: App.css
Mini-Projects/speak_test_app/src/: App.jsx  SpeakTest.jsx
Mini-Projects/student_form_to_PDF/: index.html
PKC_Quiz_App_V2/: quiz.html
