[tool.poetry]
name = "Face-Recognition-App-B.Sc.CS.SF.PKC-2023-26 - Python_App"
version = "0.1.0"
description = ""
authors = ["Samuvel Antony <samuvel6826@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.21.0"
watchdog = "^4.0.1"
cmake = "^3.29.6"
opencv-python = "^4.10.0.84"
face-recognition = "^1.3.0"
pymongo = "^4.8.0"
firebase-admin = "^6.5.0"
flask = "^3.0.3"
flask-cors = "^4.0.1"
python-dotenv = "^1.0.1"
2000 = "^0.0.1"
flask-socketio = "^5.3.6"
dlib = "^19.24.4"
face-recognition-models = "^0.3.0"
gtts = "^2.5.1"
retrying = "^1.3.4"
colorlog = "^6.8.2"
six = "^1.16.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
